// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`html.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!--

The following is from https://github.com/microsoft/vscode/blob/b949969d71c3788856872a52e3bc6441292046f9/.github/prompts/setup-environment.prompt.md?plain=1#L30-L43

According to commonmark \`</example>\` should be parsed as part of the list item

But ... whatever

-->

<example>
## Installation Summary

### ❓ Unable to Verify
- ToolName - [Reason why it couldn't be verified]
  - [Manual verification instructions steps]
</example>


---


<!--

Added a blank line before \`</example>\`

-->

<example>
## Installation Summary

### ❓ Unable to Verify
- ToolName - [Reason why it couldn't be verified]
  - [Manual verification instructions steps]

</example>

=====================================output=====================================
<!--

The following is from https://github.com/microsoft/vscode/blob/b949969d71c3788856872a52e3bc6441292046f9/.github/prompts/setup-environment.prompt.md?plain=1#L30-L43

According to commonmark \`</example>\` should be parsed as part of the list item

But ... whatever

-->

<example>
## Installation Summary

### ❓ Unable to Verify

- ToolName - [Reason why it couldn't be verified]
  - [Manual verification instructions steps]

</example>

---

<!--

Added a blank line before \`</example>\`

-->

<example>
## Installation Summary

### ❓ Unable to Verify

- ToolName - [Reason why it couldn't be verified]
  - [Manual verification instructions steps]

</example>

================================================================================
`;

exports[`multiline.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<docs-code
  header="app.ts"
  path="adev/src/content/examples/signal-forms/src/login-validation-complete/app/app.ts"
  visibleLines="[21,22,23,24,25,26,27]"
  highlight="[23,24,26]"
/>

<div
  header="app.ts"
  path="adev/src/content/examples/signal-forms/src/login-validation-complete/app/app.ts"
  visibleLines="[21,22,23,24,25,26,27]"
  highlight="[23,24,26]"
/>

<span
  header="app.ts"
  path="adev/src/content/examples/signal-forms/src/login-validation-complete/app/app.ts"
  visibleLines="[21,22,23,24,25,26,27]"
  highlight="[23,24,26]"
/>

=====================================output=====================================
<docs-code
  header="app.ts"
  path="adev/src/content/examples/signal-forms/src/login-validation-complete/app/app.ts"
  visibleLines="[21,22,23,24,25,26,27]"
  highlight="[23,24,26]"
/>

<div
  header="app.ts"
  path="adev/src/content/examples/signal-forms/src/login-validation-complete/app/app.ts"
  visibleLines="[21,22,23,24,25,26,27]"
  highlight="[23,24,26]"
/>

<span
  header="app.ts"
  path="adev/src/content/examples/signal-forms/src/login-validation-complete/app/app.ts"
  visibleLines="[21,22,23,24,25,26,27]"
  highlight="[23,24,26]"
/>

================================================================================
`;

exports[`multiline-2.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<!-- https://github.com/prettier/prettier/pull/18467#discussion_r2614298105 -->

<table><tr><td>
<pre>
**Hello**,

_world_.
</pre>
</td></tr></table>

<table><tr><td>
pre
**Hello**,

_world_.
pre
</td></tr></table>

=====================================output=====================================
<!-- https://github.com/prettier/prettier/pull/18467#discussion_r2614298105 -->

<table><tr><td>
<pre>
**Hello**,

_world_.
</pre>
</td></tr></table>

<table><tr><td>
pre
**Hello**,

_world_.
pre
</td></tr></table>

================================================================================
`;
